--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,7 +7,7 @@
         <picture>
           <source
             media="(min-width: 1200px)"
-            srcset="../images/product-1.png, ../images/product-1.png 2x"
+            srcset="./images/products/product-1_sm.png"
             type="image/png"
           />
         </picture>
